# m2-project

./: .gitignore  CMakeLists.txt  Cmake function lists.md  README.md  vcpkg g3log fix.txt
Source/Client/Archiver/: CMakeLists.txt  Main.cpp  Main.hpp  PackageCreator.cpp  PackageCreator.hpp  XmlUtil.hpp
Source/Client/Configuration/: CMakeLists.txt  Config.cpp  MainDialog.cpp  MainDialog.h
Source/Client/UserInterface/: AbstractResources.cpp  AbstractResources.h  AccountConnector.cpp  AccountConnector.h  AffectFlagContainer.cpp  AffectFlagContainer.h  CMakeLists.txt  CameraProcedure.cpp  Crashpad.cpp  Crashpad.h  CrashpadConfig.h.in  GameType.cpp  GameType.h  GuildMarkDownloader.cpp  GuildMarkDownloader.h  GuildMarkUploader.cpp  GuildMarkUploader.h  InstanceBase.cpp  InstanceBase.h  InstanceBaseBattle.cpp  InstanceBaseEffect.cpp  InstanceBaseMotion.cpp  InstanceBaseMovement.cpp  InsultChecker.cpp  MarkImage.cpp  MarkImage.h  MarkManager.cpp  MarkManager.h  NetworkActorManager.cpp  NetworkActorManager.h  ProcessCRC.cpp  PythonApplication.cpp  PythonApplication.h  PythonApplicationCamera.cpp  PythonApplicationCursor.cpp  PythonApplicationEvent.cpp  PythonApplicationModule.cpp  PythonApplicationProcedure.cpp  PythonBackground.cpp  PythonBackground.h  (+77 more)
Source/Client/WorldEditor/: CMakeLists.txt
Source/Libraries/: CMakeLists.txt
Source/Libraries/Basic/: CMakeLists.txt  File_ptr.hpp  GroupText.h  GroupTextTree.cpp  GroupTextTree.h  GroupTextTreeUtil.cpp  GroupTextTreeUtil.h  Log_G3log.cpp  Log_Spdlog.cpp  Logger.h  Logging.hpp  PragmaWarnings.hpp  Random.hpp  SimpleApp.cpp  SimpleApp.hpp  SimpleCmd.cpp  SimpleCmd.hpp  Singleton.h  robin_hood.hpp  winvercorrect.hpp
Source/Libraries/Common/: CMakeLists.txt  VnumHelper.h  auction_table.h  billing.h  building.h  cache.h  length.h  pool.h  service.h  stl.h  tables.h  teen_packet.h  utils.h
Source/Libraries/Core/: Attribute.cpp  Attribute.h  CMakeLists.txt  Grid.cpp  Grid.h  GridPage.hpp  ItemProtoReader.cpp  MobProtoReader.cpp  Poly.cpp  Poly.h  ProtoReader.hpp  Tables.hpp
Source/Libraries/EffectLib/: CMakeLists.txt  EffectData.cpp  EffectData.h  EffectElementBase.cpp  EffectElementBaseInstance.cpp  EffectInstance.cpp  EffectInstance.h  EffectManager.cpp  EffectManager.h  EffectMesh.cpp  EffectMesh.h  EffectMeshInstance.cpp  EffectUpdateDecorator.h  EmitterProperty.h  ParticleInstance.cpp  ParticleInstance.h  ParticleProperty.cpp  ParticleProperty.h  ParticleSystemData.cpp  ParticleSystemInstance.cpp  ParticleSystemInstance.h  SimpleLightData.cpp  SimpleLightData.h  SimpleLightInstance.cpp  SimpleLightInstance.h  StdAfx.h  Type.h
Source/Libraries/EterBase/: CMakeLists.txt  CPostIt.cpp  CPostIt.h  Random.cpp  Random.h  ServiceDefs.h  StdAfx.h  Stl.cpp  Stl.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  VideoMode.cpp  VideoMode.h  lzo.cpp  lzo.h  tea.cpp
Source/Libraries/EterGrnLib/: CMakeLists.txt  Granny3D.cpp  Granny3D.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ModelInstanceCollisionDetection.cpp  ModelInstanceModel.cpp  ModelInstanceMotion.cpp  ModelInstanceRender.cpp  ModelInstanceUpdate.cpp  Motion.cpp  Motion.h  StdAfx.h  Thing.cpp  Thing.h  ThingInstance.cpp  ThingInstance.h  Util.cpp  Util.h
Source/Libraries/EterImageLib/: BandiVideoLibrary.cpp  BandiVideoLibrary.h  CMakeLists.txt  DDSTextureLoader.cpp  DDSTextureLoader.h  StdAfx.h  WICTextureLoader9.cpp  WICTextureLoader9.h  dds.h  stb_image.h  winDxFix.hpp
Source/Libraries/EterLib/: AttributeData.cpp  AttributeData.h  AttributeInstance.cpp  AttributeInstance.h  BlockTexture.cpp  BlockTexture.h  CMakeLists.txt  Camera.cpp  Camera.h  Clipboard.cpp  Clipboard.h  CollisionData.cpp  CollisionData.h  ColorTransitionHelper.cpp  ColorTransitionHelper.h  CullingManager.cpp  CullingManager.h  Decal.cpp  Decal.h  DibBar.cpp  DibBar.h  Dimm.h  Engine.cpp  Engine.h  GrpBase.cpp  GrpBase.h  GrpCollisionObject.cpp  GrpCollisionObject.h  GrpColor.cpp  GrpColor.h  GrpColorInstance.cpp  GrpDIB.cpp  GrpDIB.h  GrpDetector.cpp  GrpDetector.h  GrpDevice.cpp  GrpDevice.h  GrpExpandedImageInstance.cpp  GrpExpandedImageInstance.h  GrpFontManager.cpp  (+71 more)
Source/Libraries/EterPythonLib/: CMakeLists.txt  PythonEditLine.cpp  PythonEditLine.h  PythonGraphic.cpp  PythonGraphic.h  PythonGraphicImageModule.cpp  PythonGraphicModule.cpp  PythonGraphicTextModule.cpp  PythonGraphicThingModule.cpp  PythonGridSlotWindow.cpp  PythonGridSlotWindow.h  PythonScissor.cpp  PythonScissor.h  PythonSlotWindow.cpp  PythonSlotWindow.h  PythonUtilityHeader.hpp  PythonWindow.cpp  PythonWindow.h  PythonWindowManager.cpp  PythonWindowManager.h  PythonWindowManagerModule.cpp  StdAfx.h
Source/Libraries/GameLib/: ActorInstance.cpp  ActorInstance.h  ActorInstanceAttach.cpp  ActorInstanceBattle.cpp  ActorInstanceCollisionDetection.cpp  ActorInstanceData.cpp  ActorInstanceEvent.cpp  ActorInstanceInterface.h  ActorInstanceMotion.cpp  ActorInstanceMotionEvent.cpp  ActorInstanceRender.cpp  ActorInstanceSync.cpp  Area.cpp  Area.h  AreaTerrain.cpp  AreaTerrain.h  CMakeLists.txt  DungeonBlock.cpp  DungeonBlock.h  FlyTrace.cpp  FlyTrace.h  FlyingData.cpp  FlyingData.h  FlyingInstance.cpp  FlyingInstance.h  FlyingObjectManager.cpp  FlyingObjectManager.h  GameEventManager.h  GameType.cpp  GameType.h  GameUtil.cpp  Interface.h  ItemData.cpp  ItemData.h  ItemManager.cpp  ItemManager.h  MapBase.cpp  MapBase.h  MapManager.cpp  MapManager.h  (+41 more)
Source/Libraries/LibLua/: CMakeLists.txt
Source/Libraries/LibThecore/: CMakeLists.txt
Source/Libraries/MilesLib/: CMakeLists.txt  SoundBase.cpp  SoundBase.h  SoundData.cpp  SoundData.h  SoundInstance.cpp  SoundInstance.h  SoundInstanceStream.cpp  SoundManager.cpp  SoundManager.h  Stdafx.h  Type.cpp  Type.h
Source/Libraries/PRTerrainLib/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  Terrain.cpp  Terrain.h  TerrainType.h  TextureSet.cpp  TextureSet.h
Source/Libraries/ScriptLib/: CMakeLists.txt  ModuleList.inl  PythonDebugModule.cpp  PythonLauncher.cpp  PythonLauncher.h  PythonPackModule.cpp  PythonResourceManager.cpp  PythonResourceManager.h  (+2 more)
(+666 files in other folders)
