add_subdirectory(Basic)
add_subdirectory(Core)

if (NOT BUILD_NO_SERVER)
    add_subdirectory(Common)
    add_subdirectory(LibLua)
    add_subdirectory(LibThecore)
endif()

if (NOT BUILD_NO_CLIENT)
    add_subdirectory(VFE)
    add_subdirectory(EterBase)
    add_subdirectory(EterGrnLib)
    add_subdirectory(EterImageLib)
    add_subdirectory(EterLib)
    add_subdirectory(EterPythonLib)
    add_subdirectory(GameLib)
    add_subdirectory(MilesLib)
    add_subdirectory(PRTerrainLib)
    add_subdirectory(ScriptLib)
    add_subdirectory(SpeedTreeLib)
    add_subdirectory(SphereLib)
    add_subdirectory(EffectLib)
endif()
