set(GLOBALS Globals.cpp Globals.h strtof.h typeof.h utils.h)
set(G_LZO lzo_manager.h lzo_manager.cpp)
set(DATAC ActorInstanceAccessor.cpp
	ActorInstanceAccessor.h
	EffectAccessor.cpp
	EffectAccessor.h
	EffectData.h
	MapAccessorArea.cpp
	MapAccessorArea.h
	MapAccessorOutdoor.cpp
	MapAccessorOutdoor.h
	MapAccessorTerrain.cpp
	MapAccessorTerrain.h
	MapAccessorUndo.cpp
	MapManagerAccessor.cpp
	MapManagerAccessor.h
	MapManagerEnvironment.cpp
	MapManagerUndo.cpp
	MiniMapRenderHelper.cpp
	MiniMapRenderHelper.h
	ModelInstanceAccessor.cpp
	ModelInstanceAccessor.h
	NonPlayerCharacterInfo.cpp
	NonPlayerCharacterInfo.h
	ObjectAnimationAccessor.cpp
	ObjectAnimationAccessor.h
	ObjectData.cpp
	ObjectData.h
	ObjectDataFile.cpp
	ObjectDataLight.cpp
	ShadowRenderHelper.cpp
	ShadowRenderHelper.h
	UndoBuffer.cpp
	UndoBuffer.h
)

set(DLG changebasexydlg.cpp
changebasexydlg.h
ColorAnimationDlg.cpp
ColorAnimationDlg.h
DlgGoto.cpp
DlgGoto.h
dlginitbasetexture.cpp
dlginitbasetexture.h
DlgPerspective.cpp
DlgPerspective.h
EffectBoundingSphere.cpp
EffectBoundingSphere.h
EffectParticleTimeEventGraph.cpp
EffectParticleTimeEventGraph.h
EffectTimeBar.cpp
EffectTimeBar.h
EffectTimeBarGraph.cpp
EffectTimeBarGraph.h
EffectTranslationDialog.cpp
EffectTranslationDialog.h
FloatEditDialog.cpp
FloatEditDialog.h
GraphCtrl.cpp
GraphCtrl.h
InputNumber.cpp
InputNumber.h
MapArrangeHeightProgressDialog.cpp
MapArrangeHeightProgressDialog.h
MapObjectDirectory.cpp
MapObjectDirectory.h
MapObjectProperty.cpp
MapObjectProperty.h
MapObjectPropertyPageAmbience.cpp
MapObjectPropertyPageAmbience.h
MapObjectPropertyPageBase.cpp
MapObjectPropertyPageBase.h
MapObjectPropertyPageBuilding.cpp
MapObjectPropertyPageBuilding.h
MapObjectPropertyPageDungeonBlock.cpp
MapObjectPropertyPageDungeonBlock.h
MapObjectPropertyPageEffect.cpp
MapObjectPropertyPageEffect.h
MapObjectPropertyPageTree.cpp
MapObjectPropertyPageTree.h
MapPortalDialog.cpp
MapPortalDialog.h
NewMapDlg.cpp
NewMapDlg.h
ObjectAnimationEvent.cpp
ObjectAnimationEvent.h
ObjectAnimationEventAttack.cpp
ObjectAnimationEventAttack.h
ObjectAnimationEventBase.h
ObjectAnimationEventCharacterHide.cpp
ObjectAnimationEventCharacterHide.h
ObjectAnimationEventCharacterShow.cpp
ObjectAnimationEventCharacterShow.h
ObjectAnimationEventEffect.cpp
ObjectAnimationEventEffect.h
ObjectAnimationEventEffectToTarget.cpp
ObjectAnimationEventEffectToTarget.h
ObjectAnimationEventFly.cpp
ObjectAnimationEventFly.h
ObjectAnimationEventScreenFlashing.cpp
ObjectAnimationEventScreenFlashing.h
ObjectAnimationEventScreenWaving.cpp
ObjectAnimationEventScreenWaving.h
ObjectAnimationEventSound.cpp
ObjectAnimationEventSound.h
ObjectAnimationEventWarp.cpp
ObjectAnimationEventWarp.h)

set(DBAR EffectCtrlBar.cpp
EffectCtrlBar.h
EffectLightPage.cpp
EffectLightPage.h
EffectMeshPage.cpp
EffectMeshPage.h
EffectParticlePage.cpp
EffectParticlePage.h
EffectParticleTexturePreview.cpp
effectparticletexturepreview.h
EffectTabPage.cpp
EffectTabPage.h
EffectTexturePage.cpp
EffectTexturePage.h
EffectUI.cpp
EffectUI.h
FlyCtrlBar.cpp
FlyCtrlBar.h
FlyTabPage.cpp
FlyTabPage.h
MapAttributePage.cpp
MapAttributePage.h
MapCtrlBar.cpp
MapCtrlBar.h
MapEnvironmentPage.cpp
MapEnvironmentPage.h
MapFilePage.cpp
MapFilePage.h
MapObjectPage.cpp
MapObjectPage.h
MapTabPage.cpp
MapTabPage.h
MapTerrainPage.cpp
MapTerrainPage.h
mapterraintexlistctrl.cpp
mapterraintexlistctrl.h
mapterraintexturepreview.cpp
mapterraintexturepreview.h
MapTreeLoader.cpp
MapTreeLoader.h
ObjectAnimationEventGraph.cpp
ObjectAnimationEventGraph.h
ObjectAnimationPage.cpp
ObjectAnimationPage.h
ObjectCtrlBar.cpp
ObjectCtrlBar.h
ObjectModelAttachEffectSubPage.cpp
objectmodelattacheffectsubpage.h
ObjectModelAttachObjectSubPage.cpp
ObjectModelAttachObjectSubPage.h
ObjectModelCollisionSubPage.cpp
ObjectModelCollisionSubPage.h
ObjectModelPage.cpp
ObjectModelPage.h
ObjectModelTypeCharacterSubPage.cpp
ObjectModelTypeCharacterSubPage.h
ObjectModelTypeEquipmentSubPage.cpp
ObjectModelTypeEquipmentSubPage.h
ObjectTabPage.cpp
ObjectTabPage.h
PageCtrl.cpp
PageCtrl.h
SizeCBar.cpp
SizeCBar.h
texturepropertydlg.cpp
texturepropertydlg.h)

set(UI FOHyperLink.cpp
FOHyperLink.h
GTColorDialogDlg.cpp
GTColorDialogDlg.h
GTColorSelectorWnd.cpp
GTColorSelectorWnd.h
GTColorSliderWnd.cpp
GTColorSliderWnd.h
GTColorWellWnd.cpp
GTColorWellWnd.h
GTDrawHelper.cpp
GTDrawHelper.h
SimpleUI.cpp
SimpleUI.h
ToolBar256.cpp
ToolBar256.h
ToolBarFile.cpp
ToolBarFile.h
XBrowseForFolder.cpp
XBrowseForFolder.h)

set(SCENE PickingArrow.cpp
PickingArrow.h
SceneBase.cpp
SceneBase.h
SceneBaseLocalCamera.cpp
SceneEffect.cpp
SceneEffect.h
SceneEffectGizmo.cpp
SceneFly.cpp
SceneFly.h
SceneMap.cpp
SceneMap.h
SceneMapCursor.cpp
SceneMapCursor.h
SceneObject.cpp
SceneObject.h
SceneObjectModelInstance.cpp)

set(WE framework.h
MainFrm.cpp
MainFrm.h
PythonWorldEditorModule.cpp
resource.h
Resources
StdAfx.cpp
StdAfx.h
targetver.h
Type.cpp
Type.h
Util.cpp
Util.h
ViewportManager.cpp
ViewportManager.h
WorldEditor.aps
WorldEditor.cpp
WorldEditor.h
WorldEditor.rc
WorldEditorDoc.cpp
WorldEditorDoc.h
WorldEditorView.cpp
WorldEditorView.h)

set(RES ambience_distance.bmp
bitmap1.bmp
bmp00001.bmp
bmp00002.bmp
bmp00003.bmp
bmp00004.bmp
bmp00005.bmp
bmp00006.bmp
bmp00007.bmp
cursor1.cur
effect_light.bmp
effect_m.bmp
effect_maximize.bmp
effect_mesh.bmp
effect_minimize.bmp
effect_p.bmp
effect_particle.bmp
effect_play.bmp
effect_play_loop.bmp
effect_stop.bmp
effect_timebar_enable.bmp
effect_xyyzzx.bmp
effect_xyz.bmp
effect_z.bmp
effect_zoom_in_horizon.bmp
effect_zoom_out_horizon.bmp
fly_effect.bmp
fly_object.bmp
fly_type_exp.bmp
fly_type_line.bmp
fly_type_multi_line.bmp
fly_type_sine.bmp
icon1.ico
mainframe_large.bmp
mainframe_small.bmp
map_attribute.bmp
map_edit.bmp
map_envi.bmp
map_environment.bmp
map_file.bmp
map_object.bmp
map_terrain.bmp
map_terrain_brush_down.bmp
map_terrain_brush_noise.bmp
map_terrain_brush_plateau.bmp
map_terrain_brush_shape_circle.bmp
map_terrain_brush_shape_square.bmp
map_terrain_brush_smooth.bmp
map_terrain_brush_up.bmp
object_a.bmp
Object_Animation.bmp
object_m.bmp
Object_Model.bmp
Toolbar.bmp
toolbar1.bmp
TreeItemImageList.bmp
WorldEditor.ico
WorldEditor.rc2
WorldEditorDoc.ico
WorldEditor_0.ico
WorldEditor_1.ico)

list(TRANSFORM GLOBALS PREPEND Config/)
list(TRANSFORM G_LZO PREPEND Config/Lzo/)
list(TRANSFORM DATAC PREPEND DataControl/)
list(TRANSFORM DLG PREPEND Dialog/)
list(TRANSFORM DBAR PREPEND DockingBar/)
list(TRANSFORM UI PREPEND Interface/)
list(TRANSFORM SCENE PREPEND Scene/)
list(TRANSFORM WE PREPEND WorldEditor/)
list(TRANSFORM RES PREPEND WorldEditor/Resources/)

source_group(WorldEditor FILES ${WE})
source_group(Resources FILES ${RES})
source_group(Config FILES ${GLOBALS})
source_group(Config/lzo FILES ${G_LZO})
source_group(DataControl FILES ${DATAC})
source_group(Dialog FILES ${DLG})
source_group(DockingBar FILES ${DBAR})
source_group(Interface FILES ${UI})
source_group(Scene FILES ${SCENE})

add_executable(WorldEditor ${WE} ${GLOBALS} ${G_LZO} ${DATAC} ${DLC} ${DBAR} ${UI} ${SCENE} ${RES})
set_target_properties(WorldEditor PROPERTIES FOLDER "Tools")
target_include_directories(WorldEditor PRIVATE WorldEditor/ ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(WorldEditor PRIVATE EterGrnLib EterLib MilesLib SpeedTreeLib)
set(LINK_DEPS DevIL lzo2 IlmBase OpenEXR PNG JPEG lcms2 tiff jasper liblzma)
auto_dep_exe(WorldEditor)
#do_pch(PROJECT WorldEditor)
